<resources>
    <string name="app_name">YQBDAPP</string>

    <!--华丽的分割线-->
    <string name="app_dialog_loading">努力加载中 &#8230;</string>
    <string name="app_dialog_cancel">取消</string>
    <string name="app_dialog_retry_msg">请求失败！</string>
    <string name="app_dialog_retry_positive_btn">重试</string>
    <string name="app_dialog_title_tips">温馨提示</string>
    <string name="app_dialog_title_ip_list">请输入网址和IP</string>
    <string name="app_request_error">网络错误，请稍后再试</string>
    <string name="app_request_fail">请求失败，请稍后再试</string>
    <string name="app_request_unlogin">未登录，请登录重试</string>
    <string name="task_title">•标题</string>
    <string name="task_description">•描述</string>
    <string name="task_address">•地点</string>
    <string name="pay">•报酬</string>
    <string name="task_publish">提交</string>
    <string name="dealline">请选择截止日期</string>
    <string name="upload_picture">上传图片</string>
    <string name="sign_up_people_number">报名人数</string>
    <string name="current_people_number">已招人数</string>
    <string name="max_people_number">•最大人数</string>
    <string name="primary_work">•主要工作</string>
    <string name="app_dialog_ok">OK</string>

    <string name="edit">编辑</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- strings for main activity-->
    <string name="main_user_center_title">我的</string>
    <string name="main_task_list_title">任务</string>

    <!-- strings for my collect activity-->
    <string name="user_my_collect_title">我的收藏</string>

    <!-- strings for my info activity-->
    <string name="user_my_info_title">个人信息</string>

    <!-- strings for modify activity-->
    <string name="user_modify_title">修改个人信息</string>


</resources>
