<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_publish_task"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.yqbd.yqbdapp.user.activity.PostTaskActivity">
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/task_title"
                android:ems="10"
                android:id="@+id/task_title"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/task_description"
                android:ems="10"
                android:id="@+id/task_description"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/task_address"
                android:ems="10"
                android:id="@+id/task_address"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/pay"
                android:ems="10"
                android:id="@+id/pay"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/max_people_number"
                android:ems="10"
                android:id="@+id/max_people_number"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                    android:text="@string/dealline"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/dealline"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dealline"
                    android:gravity="center"
                    android:id="@+id/dealline_time"
                    android:textSize="24sp"/>
        </LinearLayout>
        <Button
                android:text="@string/upload_picture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/upload_picture"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/default_picture"
                android:id="@+id/imageView"/>

        <Button
                android:text="@string/task_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/task_publish"/>
    </LinearLayout>
</ScrollView>
</LinearLayout>
