<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/swipe_refresh">
<android.support.design.widget.CoordinatorLayout
        android:id="@+id/activity_moments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.yqbd.yqbdapp.user.activity.SingleTaskActivity">
    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/moments_appBar">
        <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentScrim="?attr/colorPrimaryDark"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:id="@+id/moments_collapsingToolbar">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:background="@drawable/background"
                    android:id="@+id/imageView"/>
            <android.support.v7.widget.Toolbar
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    android:id="@+id/toolBar">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/topToolBarTitle"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="22sp"/>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:background="@color/white">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/task_title"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/task_title"
                        android:textSize="16sp"
                        android:id="@+id/task_title"
                        android:padding="10dp"
                        android:background="@color/white"/>
            </LinearLayout>
            <com.yqbd.yqbdapp.widget.TagListView
                    xmlns:f="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/tagview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/common_margin"
                    android:paddingLeft="@dimen/common_margin"
                    android:paddingRight="@dimen/common_margin"
                    android:paddingTop="16.0dip"
                    f:horizontalSpacing="@dimen/tag_horizontal_spacing"
                    f:orientation="horizontal"
                    f:verticalSpacing="@dimen/tag_vertical_spacing"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/task_description"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@color/white">
                    <View
                            android:layout_width="1dip"
                            android:layout_height="match_parent"
                            android:background="#585858"
                            android:layout_gravity="center_horizontal"/>
                    <TextView
                            android:layout_marginStart="2dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/task_description"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:lines="2"
                            android:id="@+id/task_description"/>
                    <ImageButton
                            android:layout_gravity="bottom"
                            android:layout_width="8dp"
                            android:layout_height="10dp"
                            android:layout_marginBottom="2dp"
                            app:srcCompat="@drawable/sort_common_down"
                            android:id="@+id/imageButton"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:background="@color/white">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/primary_work"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/primary_work"
                        android:padding="10dp"
                        android:id="@+id/primary_work"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:background="@color/white">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/task_address"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/task_address"
                        android:padding="10dp"
                        android:id="@+id/task_address"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:background="@color/white">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="•开始时间"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="开始时间"
                        android:padding="10dp"
                        android:id="@+id/start_time"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:background="@color/white">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="•结束时间"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="结束时间"
                        android:padding="10dp"
                        android:id="@+id/complete_time"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:background="@color/white">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pay"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pay"
                        android:padding="10dp"
                        android:id="@+id/pay"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:background="@color/white">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="@string/max_people_number"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/max_people_number"
                        android:padding="10dp"
                        android:id="@+id/max_people_number"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:background="@color/white">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="•联系方式"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="联系方式"
                        android:padding="10dp"
                        android:id="@+id/primary_contact"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:background="@color/white">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="•合作单位"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="合作单位"
                        android:padding="10dp"
                        android:id="@+id/other_company"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:background="@color/white">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="•备注"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="备注"
                        android:id="@+id/remark"/>
            </LinearLayout>
            <!-- <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                 <Button
                         android:text="@string/dealline"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:id="@+id/dealline"/>
                 <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="@string/dealline"
                         android:gravity="center"
                         android:id="@+id/dealline_time"
                         android:textSize="24sp"/>
             </LinearLayout》-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:background="@color/white">
                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:layout_gravity="right">
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:text="参与者"
                            android:background="@drawable/button"
                            android:id="@+id/participant_button"
                            android:layout_marginRight="10dp"/>
                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:text="申请"
                            android:background="@drawable/button"
                            android:id="@+id/task_button"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:background="@color/white">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="备注"
                    />
        </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.SwipeRefreshLayout>